WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178192
Runtime disable poly proto because it may be a 3-4% Speedometer regression
https://bugs.webkit.org/show_bug.cgi?id=178192
Summary
Runtime disable poly proto because it may be a 3-4% Speedometer regression
Saam Barati
Reported
2017-10-11 16:07:14 PDT
I'm going to investigate locally, but let's runtime disable it for now.
Attachments
patch
(4.76 KB, patch)
2017-10-11 16:29 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-10-11 16:29:51 PDT
Created
attachment 323482
[details]
patch
JF Bastien
Comment 2
2017-10-11 16:30:39 PDT
Comment on
attachment 323482
[details]
patch r=me
WebKit Commit Bot
Comment 3
2017-10-11 17:53:49 PDT
Comment on
attachment 323482
[details]
patch Clearing flags on attachment: 323482 Committed
r223222
: <
https://trac.webkit.org/changeset/223222
>
WebKit Commit Bot
Comment 4
2017-10-11 17:53:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-10-11 17:55:28 PDT
<
rdar://problem/34946609
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug