Runtime disable poly proto because it may be a 3-4% Speedometer regression https://bugs.webkit.org/show_bug.cgi?id=178192

Reviewed by JF Bastien.

Source/JavaScriptCore:

* runtime/Options.h:
* runtime/StructureInlines.h:
(JSC::Structure::shouldConvertToPolyProto):

Tools:

* Scripts/run-jsc-stress-tests:


Canonical link: https://commits.webkit.org/194451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223222 268f45cc-cd09-0410-ab3c-d52691b4dbfc